src/styles/base/_base.scss
* {
  box-sizing: border-box;
}
html {
  font-size: 62.5%;
}
a:hover {
  text-decoration:none;
}

body {
  color: $dark-grey;
  font-family: 'Sawarabi Gothic', sans-serif;
  font-size: $m-size;
  line-height: 1.6;
  padding-bottom: 100px;
  
}

button {
  cursor: pointer;
}

button:disabled {
  cursor: default;
}

.is-active {
  font-weight: bold;
}

.text-align-right {
  text-align: right;
}

